--- a/app/src/main/res/layout/daily_challenge.xml
+++ b/app/src/main/res/layout/daily_challenge.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,13 +7,18 @@
 
     <TextView
         android:id="@+id/questionDisplay"
-        android:layout_width="364dp"
-        android:layout_height="226dp"
+        android:layout_width="363dp"
+        android:layout_height="82dp"
+        android:layout_below="@+id/dailyChallengeText"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="25dp"
         android:text="Question"
         app:layout_constraintBottom_toTopOf="@+id/answers"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dailyChallengeText" />
+        app:layout_constraintTop_toBottomOf="@+id/dailyChallengeText"
+        app:layout_constraintVertical_bias="0.215" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
@@ -41,56 +46,84 @@
         android:layout_width="375dp"
         android:layout_height="64dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.527"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
+        android:layout_centerHorizontal="true"
         android:id="@+id/dailyChallengeText"
         android:text="DAILY  CHALLENGE"
         android:gravity="center"
         android:textSize="35dp"
         android:textStyle="bold"
-        android:fontFamily="@font/karla"/>
+        android:fontFamily="@font/karla"
+        android:layout_below="@+id/constraintLayout3"/>
 
     <RelativeLayout
         android:id="@+id/answers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/questionDisplay">
+        android:layout_below="@+id/explanationScroll">
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="571dp"
             android:id="@+id/answerA"
-            android:text="A."/>
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="clickedA"
+            android:text="A."
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="571dp"
+            tools:layout_editor_absoluteY="571dp" />
+
+        <Button
             android:id="@+id/answerB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/answerA"
-            android:text="B."/>
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:onClick="clickedB"
+            android:text="B."
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="571dp"
+            tools:layout_editor_absoluteY="571dp" />
+
+        <Button
             android:id="@+id/answerC"
-            android:layout_below="@+id/answerB"
-            android:text="C."/>
-        <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/answerB"
+            android:onClick="clickedC"
+            android:text="C."
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="571dp"
+            tools:layout_editor_absoluteY="571dp" />
+
+        <Button
             android:id="@+id/answerD"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/answerC"
+            android:onClick="clickedD"
             android:text="D."
-            android:layout_below="@+id/answerC"/>
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="571dp" />
+
     </RelativeLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ScrollView
+        android:id="@+id/explanationScroll"
+        android:layout_width="369dp"
+        android:layout_height="94dp"
+        android:layout_below="@+id/questionDisplay"
+        android:layout_marginTop="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp">
+
+        <TextView
+            android:id="@+id/explanation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:text=""
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="372dp" />
+
+    </ScrollView>
+
+
+
+</RelativeLayout>
