--- a/app/src/main/res/layout/activity_reading_questions.xml
+++ b/app/src/main/res/layout/activity_reading_questions.xml
@@ -63,7 +63,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
             android:paddingStart="8dp"
-            android:background="@drawable/button_border"/>
+            android:background="@drawable/button_border"
+            android:foreground="@drawable/click_ripple"/>
 
         <!-- maybe another button on right -->
 
