Reading questions done by user now stored in firestore as well.

--- a/app/src/main/res/layout/all_past_problems.xml
+++ b/app/src/main/res/layout/all_past_problems.xml
@@ -35,14 +35,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:id="@+id/past_problems_relative_layout">
+            android:id="@+id/past_problems_linear_layout"
+            android:orientation="vertical">
 
 
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
