--- a/app/src/main/res/layout/activity_reading_questions.xml
+++ b/app/src/main/res/layout/activity_reading_questions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fbutton="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,9 +30,7 @@
             android:gravity="center_horizontal" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -42,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        fbutton:layout_constraintGuide_percent="0.5" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnA"
@@ -52,9 +51,9 @@
         android:onClick="buttonA"
         android:backgroundTint="@color/blue"
         android:text="Button"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        fbutton:layout_constraintEnd_toEndOf="@+id/textView2"
+        fbutton:layout_constraintStart_toStartOf="@+id/textView2"
+        fbutton:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnB"
@@ -64,9 +63,9 @@
         android:onClick="buttonB"
         android:text="Button"
         android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnA"
-        app:layout_constraintStart_toStartOf="@+id/btnA"
-        app:layout_constraintTop_toBottomOf="@+id/btnA" />
+        fbutton:layout_constraintEnd_toEndOf="@+id/btnA"
+        fbutton:layout_constraintStart_toStartOf="@+id/btnA"
+        fbutton:layout_constraintTop_toBottomOf="@+id/btnA" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnC"
@@ -76,9 +75,9 @@
         android:onClick="buttonC"
         android:text="Button"
         android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnB"
-        app:layout_constraintStart_toStartOf="@+id/btnB"
-        app:layout_constraintTop_toBottomOf="@+id/btnB" />
+        fbutton:layout_constraintEnd_toEndOf="@+id/btnB"
+        fbutton:layout_constraintStart_toStartOf="@+id/btnB"
+        fbutton:layout_constraintTop_toBottomOf="@+id/btnB" />
 
     <info.hoang8f.widget.FButton
         android:id="@+id/btnD"
@@ -88,30 +87,32 @@
         android:onClick="buttonD"
         android:text="Button"
         android:backgroundTint="@color/blue"
-        app:layout_constraintEnd_toEndOf="@+id/btnC"
-        app:layout_constraintStart_toStartOf="@+id/btnC"
-        app:layout_constraintTop_toBottomOf="@+id/btnC" />
+        fbutton:layout_constraintEnd_toEndOf="@+id/btnC"
+        fbutton:layout_constraintStart_toStartOf="@+id/btnC"
+        fbutton:layout_constraintTop_toBottomOf="@+id/btnC" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="25dp"
         android:text="Question"
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"
+        fbutton:layout_constraintTop_toBottomOf="@+id/scrollView2"
+        android:gravity="center"
+        />
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="409dp"
-        android:layout_height="381dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        android:layout_width="408dp"
+        android:layout_height="247dp"
+        fbutton:layout_constraintBottom_toTopOf="@+id/guideline"
+        fbutton:layout_constraintEnd_toEndOf="parent"
+        fbutton:layout_constraintStart_toStartOf="parent"
+        fbutton:layout_constraintTop_toTopOf="parent"
+        fbutton:layout_constraintVertical_bias="0.0">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -121,7 +122,11 @@
             <TextView
                 android:id="@+id/txtPassage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"/>
         </RelativeLayout>
     </ScrollView>
 
